changed a very very small typo, 1 letter

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -23,7 +23,7 @@
         </p>
 
         <section class="preparation">
-          <h2>Presaration time</h2>
+          <h2>Preparation time</h2>
           <ul>
             <li><span>Total:</span> Approximately 10 minutes</li>
             <li><span>Preparation:</span> 5 minutes</li>
